<resources>
    <string name="android_ui_framework" translatable="false">Android UI framework</string>
    <string name="billing_link" translatable="false">https://developer.android.com/google/play/billing/?hl=fr</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="discord_link" translatable="false">https://discord.com/developers/docs/intro</string>
    <string name="discord_tag" translatable="false">Tag Discord</string>
    <string name="discordapi" translatable="false">DiscordAPI</string>
    <string name="can_sub" translatable="false">Can sub !</string>
    <string name="can_t" translatable="false">Can\'t !</string>
    <string name="can" translatable="false">Can !</string>
    <string name="compose_link" translatable="false">https://developer.android.com/develop/ui/compose?hl=fr</string>
    <string name="leader" translatable="false"><![CDATA[Encore <b>%1$s café</b> pour passer au niveau suivant.]]></string>
    <string name="mario_kart_stats" translatable="false">Stats MK8DX</string>
    <string name="line_up" translatable="false">Line-up :</string>
    <string name="made_with_by_larii" translatable="false">Made with ❤️ by Larii</string>
    <string name="fb_auth_link" translatable="false">https://firebase.google.com/docs/auth</string>
    <string name="fb_real_link" translatable="false">https://firebase.google.com/docs/database</string>
    <string name="firebase_authentication" translatable="false">Firebase Authentication</string>
    <string name="firebase_realtime_database" translatable="false">Firebase Realtime Database</string>
    <string name="gcloud_link" translatable="false">https://cloud.google.com/gcp/?hl=fr</string>
    <string name="google_cloud_platform" translatable="false">Google Cloud Platform</string>
    <string name="google_play_billing" translatable="false">Google Play Billing</string>
    <string name="google" translatable="false">Google</string>
    <string name="minus_placeholder" translatable="false">-%s</string>
    <string name="minus" translatable="false">-</string>
    <string name="jetpack_compose" translatable="false">Jetpack Compose</string>
    <string name="host" translatable="false">Host :</string>
    <string name="mkc_link" translatable="false">https://www.mariokartcentral.com/mkc/</string>
    <string name="mkcentral" translatable="false">MKCentral</string>
    <string name="not_sure" translatable="false">Not sure…</string>
    <string name="plus" translatable="false">+</string>
    <string name="shock_count_placeholder" translatable="false">x%s</string>
    <string name="the_home_of_mario_kart_tournaments" translatable="false">The home of Mario Kart tournaments</string>
    <string name="version" translatable="false">Version %1$s</string>
    <string name="winrate" translatable="false">Winrate</string>
    <string name="room_link" translatable="false">https://developer.android.com/training/data-storage/room?hl=fr</string>
    <string name="room" translatable="false">Room</string>
    <string name="date_hour_format">dd/MM/yyyy - HH\'h\'mm</string>
    <string name="short_date_format">dd/MM/yyyy</string>
    <string name="full_date_format">dd MMMM yyyy</string>
    <string name="add_details_dispo_title">Ajoute un message pour ton équipe !</string>
    <string name="add_details">Ajouter une précision…</string>
    <string name="admin">Admin</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="adversaire">Adversaire</string>
    <string name="adversaires">Adversaires</string>
    <string name="ajouter_en_tant_qu_ally">Ajouter en tant qu\'ally</string>
    <string name="ajouter_l_adversaire">Ajouter l\'adversaire</string>
    <string name="ajouter_les_dispos">Ajouter les dispos</string>
    <string name="ajouter_une_pr_cision">Aucune précision pour le moment.</string>
    <string name="all">Tout</string>
    <string name="allys">Allys</string>
    <string name="annuler_le_match">Annuler le match</string>
    <string name="annuler">Annuler</string>
    <string name="api_discord_pour_les_d_veloppeurs">API Discord pour les développeurs</string>
    <string name="app_name">Stats MK8DX</string>
    <string name="back">Retour</string>
    <string name="bad">Virée à Amsterdam</string>
    <string name="basculer_en_tant_qu_admin">Basculer en tant qu\'admin</string>
    <string name="basculer_en_tant_que_membre">Basculer en tant que membre</string>
    <string name="base_d_utilisateurs_purg_e">Base d\'utilisateurs purgée.</string>
    <string name="base_de_donn_es_en_temps_r_el_via_google_cloud">Base de données en temps réel via Google Cloud</string>
    <string name="batd">Athènes antique</string>
    <string name="bbb">Balade berlinoise</string>
    <string name="bbc3">Château Bowser 3</string>
    <string name="bbl">Lac Boo</string>
    <string name="bbr">Bousculade à Bangkok</string>
    <string name="bc">Château Bowser</string>
    <string name="bcma">Supermarché Coco</string>
    <string name="bcmo">Montagne Choco</string>
    <string name="bdc">Paquebot Daisy</string>
    <string name="bdcw">Circuit Daisy</string>
    <string name="bdd">Désert Toussec</string>
    <string name="bdkm">Montagne DK</string>
    <string name="bdksc">Pic DK</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="bkc">Cap Koopa</string>
    <string name="bkd">Désert Kalimari</string>
    <string name="blal">Road-trip à Los Angeles</string>
    <string name="blanc">Blanc</string>
    <string name="bll">Détour à Londres</string>
    <string name="bmc">Circuit Mario DS</string>
    <string name="bmc3">Circuit Mario 3</string>
    <string name="bmd">Méandres madrilènes</string>
    <string name="bmg">Gorge Champignon</string>
    <string name="bmh">Route Clair de Lune</string>
    <string name="bmm">Mont festif</string>
    <string name="bmt">Bois Vermeil</string>
    <string name="bnh">Dojo Ninja</string>
    <string name="bnym">Escapade New Yorkaise</string>
    <string name="bpg">Jardin Peach</string>
    <string name="bpp">Promenade à Paris</string>
    <string name="bppc">Ruines Plante Piranha</string>
    <string name="bra">Roma Romantica</string>
    <string name="briw">Monde glacé d\'Harmonie</string>
    <string name="brp">Riverside Parc</string>
    <string name="brr">Route Arc-en-ciel 3DS</string>
    <string name="brrm">Mont Eboulis</string>
    <string name="brrw">Route Arc-en-ciel Wii</string>
    <string name="bscs">Course à la propreté</string>
    <string name="bsg">Jardin Volant</string>
    <string name="bshs">Cité Sorbet</string>
    <string name="bsis">Poursuite à Singapour</string>
    <string name="bsl">Pays Neigeux</string>
    <string name="bsr">Corniche Champignon</string>
    <string name="bss">Sprint à Sydney</string>
    <string name="bsw">Pays Crépuscule</string>
    <string name="btb">Traversée de Tokyo</string>
    <string name="btc">Circuit Toad</string>
    <string name="bvv">Virages à Vancouver</string>
    <string name="bwp">Flipper Waluigi</string>
    <string name="bws">Stade Waluigi</string>
    <string name="byi">Île de Yoshi</string>
    <string name="caf_ensemble">café ensemble</string>
    <string name="caf_offert">café offert</string>
    <string name="caf_s_ensemble">cafés ensemble</string>
    <string name="caf_s_offerts">cafés offerts</string>
    <string name="calcul_des_statistiques">Calcul des statistiques</string>
    <string name="cc">Voie Céleste</string>
    <string name="ce_joueur_est_un_ally">Ce joueur est un ally.</string>
    <string name="cette_semaine">Cette semaine</string>
    <string name="changer_mon_email">Changer mon email</string>
    <string name="changer_mon_mot_de_passe">Changer mon mot de passe</string>
    <string name="circuit_le_plus_jou">Le plus joué</string>
    <string name="circuits">Circuits</string>
    <string name="code_ami">Code ami</string>
    <string name="coffee_error_message">Une erreur est survenue lors de la distribution du café. Veuillez réessayer plus tard. \n \n Votre achat a été annulé.</string>
    <string name="coffee_in_progress">Distribution du café en cours…</string>
    <string name="coffee_pending_message">Il y a du monde au comptoir pour récupérer le café. Il sera disponible dans quelques minutes.</string>
    <string name="coffee_success_message">Café bien reçu ! Merci infiniment du soutien.</string>
    <string name="coffee">Offrir un café</string>
    <string name="confirmez_le_mot_de_passe">Confimez le mot de passe</string>
    <string name="connexion_en_cours">Connexion en cours…</string>
    <string name="connexion">Connexion</string>
    <string name="couleurs">Couleurs</string>
    <string name="courses_jou_es">Courses jouées :</string>
    <string name="cr_er_une_war">Créer une war</string>
    <string name="creating_user">Création du compte en cours, veuillez patienter…</string>
    <string name="creating_war">Création de la war en cours, veuillez patienter…</string>
    <string name="credits">Crédits</string>
    <string name="d_j_sur_l_appli">Déjà sur l\'appli ?</string>
    <string name="d_tails">Détails</string>
    <string name="d">D</string>
    <string name="dac">Animal Crossing</string>
    <string name="date">Date</string>
    <string name="date_de_cr_ation_s">Date de création : %s</string>
    <string name="dbb">Big Blue</string>
    <string name="dbp">Parc Baby</string>
    <string name="dcl">Pays Fromage</string>
    <string name="ddd">Route du Dragon</string>
    <string name="dea">Arène Excitebike</string>
    <string name="defeat_placeholder">%s défaites</string>
    <string name="delete_war_confirm">Êtes-vous sûr de vouloir supprimer le match ?</string>
    <string name="delete_war_in_progress">Suppression de la war en cours, veuillez patienter…</string>
    <string name="derni_re_mise_jour">Dernière mise à jour :</string>
    <string name="derni_res_wars">Dernières wars</string>
    <string name="dernier_caf_offert_le">Dernier café offert le</string>
    <string name="dhc">Circuit Hyrule</string>
    <string name="diff">Diff:</string>
    <string name="diio">Station Glagla</string>
    <string name="disable_multi_roster">Désactivez le paramètre pour ne prendre en compte que votre roster.</string>
    <string name="dispos_lus">Dispos + LUs</string>
    <string name="dispos_seulement">Dispos seulement</string>
    <string name="dispos_war">Dispos war</string>
    <string name="dmc">Mute City</string>
    <string name="entrez_votre_adresse_email">Entrez votre adresse email:</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe:</string>
    <string name="equipe">Equipe</string>
    <string name="individuel">Individuel</string>
    <string name="membre">Membre</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="moyenne_diff">Moyenne diff.</string>
    <string name="nb_fois_gagn_es">Nb. fois gagnées</string>
    <string name="nb_fois_jou_es">Nb. fois jouées</string>
    <string name="nouveau_sur_l_appli">Nouveau sur l\'appli ?</string>
    <string name="options_de_tri">Options</string>
    <string name="pr_paration_de_la_war">Préparation de la war</string>
    <string name="rechercher_un_nom_ou_une_abr_viation">Rechercher un nom ou une abréviation…</string>
    <string name="rechercher_une_quipe">Rechercher une équipe…</string>
    <string name="s_lectionnez_un_adversaire">Sélectionnez un adversaire :</string>
    <string name="se_connecter">Se connecter</string>
    <string name="statistiques_de_l_quipe">Statistiques de l\'équipe</string>
    <string name="statistiques_des_adversaires">Statistiques des adversaires</string>
    <string name="statistiques_des_circuits">Statistiques des circuits</string>
    <string name="statistiques_des_joueurs">Statistiques des joueurs</string>
    <string name="statistiques_individuelles">Statistiques individuelles</string>
    <string name="valider_la_lu">Valider la LU</string>
</resources>