<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_disconnected"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:background="?android:colorPrimary"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/connexion"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/main_layout"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/white_alphaed"
                android:background="@drawable/rounded_bg"
                android:textColorHint="@color/harmonia_dark"
                app:hintTextColor="@color/harmonia_dark"
                android:layout_height="70dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/email_et"
                    android:background="@color/white"
                    android:textColor="@color/harmonia_dark"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"
                    android:hint="@string/entrez_votre_adresse_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                app:hintTextColor="@color/harmonia_dark"
                android:backgroundTint="@color/white_alphaed"
                android:textColorHint="@color/harmonia_dark"
                android:background="@drawable/rounded_bg"
                android:layout_height="70dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@null"
                    android:background="@color/white"
                    android:id="@+id/password_et"
                    android:textColor="@color/harmonia_dark"
                    android:inputType="textPassword"
                    android:hint="@string/entrez_votre_mot_de_passe" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:textColor="@color/white"
        android:id="@+id/connect_btn"
        android:textSize="14sp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="@string/se_connecter"
        android:gravity="center"
        android:layout_gravity="bottom"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:textColor="@color/harmonia_dark"
        android:id="@+id/forgot_password_button"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/mot_de_passe_oubli"
        android:gravity="center"
        android:layout_gravity="bottom"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:textColor="@color/harmonia_dark"
        android:id="@+id/signup_btn"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/nouveau_sur_l_appli"
        android:gravity="center"
        android:layout_gravity="bottom"/>


    </LinearLayout>

