<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorPrimary"
        android:id="@+id/main_war_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textColor="@color/harmonia_dark"
            android:text="@string/statistiques_des_circuits"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"/>


        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/rounded_bg"
            android:hint="@string/rechercher_un_nom_ou_une_abr_viation"
            android:textColor="@color/black"
            android:textColorHint="@color/boo"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/search_et"
            android:importantForAutofill="no" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/indiv_btn"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:textColor="@color/harmonia_dark"
                android:fontFamily="@font/roboto"
                android:textAlignment="center"
                android:text="@string/individuel"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingVertical="10dp"
                android:layout_weight="1"
                android:textColor="@color/harmonia_dark"

                android:id="@+id/team_btn"
                android:textAlignment="center"
                android:text="@string/equipe"/>

        </LinearLayout>




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="5dp"
            android:background="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/harmonia_dark"
            android:text="@string/options_de_tri" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/total_play_sort_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_bg"
                            android:paddingVertical="5dp"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/nb_fois_jou_es"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/total_win_sort_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"
                            android:paddingVertical="5dp"
                            android:text="@string/nb_fois_gagn_es"
                            android:fontFamily="@font/montserrat_regular"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/winrate_sort_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:paddingVertical="5dp"
                            android:text="@string/winrate"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/avg_diff_sort_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_bg"
                            android:paddingVertical="5dp"
                            android:layout_margin="5dp"
                            android:text="@string/moyenne_diff"
                            android:fontFamily="@font/montserrat_regular"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"/>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:id="@+id/empty_maps"
                android:text="@string/jouez_d_abord_des_circuits_afin_de_les_voir_appara_tre_ici"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/most_played_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:paddingHorizontal="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical" />

        </RelativeLayout>



        </LinearLayout>

