<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/logout_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/harmonia_dark"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/indiv_stats"
                android:paddingVertical="15dp"
                android:text="@string/statistiques_individuelles"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/harmonia_dark"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/team_stats"
                android:paddingVertical="15dp"
                android:text="@string/statistiques_de_l_quipe"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/harmonia_dark"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/player_stats"
                android:paddingVertical="15dp"
                android:text="@string/statistiques_des_joueurs"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/harmonia_dark"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/opponents_stats"
                android:paddingVertical="15dp"
                android:text="@string/statistiques_des_adversaires"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/harmonia_dark"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/map_stats"
                android:paddingVertical="15dp"
                android:text="@string/statistiques_des_circuits"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/harmonia_dark"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/periodic_stats"
                android:paddingVertical="15dp"
                android:text="@string/statistiques_p_riodiques"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

        </LinearLayout>







</LinearLayout>