<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:translationY="-5dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/harmonia_clear">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/pr_paration_de_la_war"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:paddingVertical="10dp"
            android:textColor="@color/harmonia_dark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/harmonia_dark"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="@string/line_up"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/first_half_lu"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:layout_weight="1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/second_half_lu"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
android:orientation="vertical">

        <TextView  android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/harmonia_dark"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="@string/s_lectionnez_un_adversaire"/>

        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/rounded_bg"
            android:hint="@string/rechercher_une_quipe"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/boo"
            android:backgroundTint="@color/white_alphaed"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/search_et"
            android:importantForAutofill="no" />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/team_rv"
            android:layout_marginBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/text_color"
            android:id="@+id/confirm_lu_btn"
            android:enabled="false"
            android:fontFamily="@font/roboto"
            android:text="@string/valider_la_lu"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>
    </LinearLayout>







</LinearLayout>